@@ -6,7 +6,7 @@
 1628169185 438e24825a995691408e173f95e79d6c45540591cf7397020cbb03aebc40c216e8b74eb7016474798196794c72d5afc4efaa0108a387900d81f5f7791ce51c08 SOURCE/PGME/BUILD.BAT
 1627934430 f8383a5edc04b6113db78cda2143e29abaab2149c8c7ebbfa7bfe68739323e256fa5f767ce6651169501471fd6982629cb86004ad4e90f16aeb206d56dd4ac1a SOURCE/PGME/CLEAN.BAT
 1627980145 babd8780f308b8ecd082132a088db1402c0e38ddea4e337d1ad571e0c3d163dc94e030229a78192a04edd7be800df76e3848fd584fb8b94c52e42ed2d3ec763a SOURCE/PGME/CONTRIBUTING.md
-1437956760 9939f56c8fb52dfcd2e376bd4a0ba340a1eaa79dabaa9b41980e69691d45c900a926cb19bea643cb1a647e2c751a0ddbeefe39d9af2e90e5cb0ea5064d2b539e SOURCE/PGME/CUSTOM/config/ETERNITY.CFG
+1628183737 16c0a141dca7cb215f66f2e609ba61d783179cb49bdcc0bd28b60629b6ff333d758cbb105bdf92de3d34df45e8d1312f113eee3279a809a6adfb634f140efcf8 SOURCE/PGME/CUSTOM/config/ETERNITY.CFG
 1437956760 8d5d34d79cd66d983bea780a01827f225053c037d68593919f2f335343568747aed4542c7365e573cb55fa16b7a6494f6d4fb4aea18a4e8cad3fc02210bc2a80 SOURCE/PGME/CUSTOM/fonts/ALT814.FNT
 1437956760 79385d9b4c8cf9df9dae524a0ede786c297d25ebe1124824480fb597c768c4d4e126961fef1b3fd431059982fe3d64dceb7acb74c05a0de64d24fe68219aa70c SOURCE/PGME/CUSTOM/fonts/CAP816.FNT
 1591635961 b66d6996af50ddb82e46f2c1d5d6bcb081b781fbd8f39126bdfc9e2d7242fb232059ec7d0950b0013a686e05e9fe866ef3e2ea6434d12978e73a4f0425421509 SOURCE/PGME/CUSTOM/fonts/FR850-16.FNT
@@ -70,8 +70,8 @@
 1437956760 dd2e1c7fb981c08166603bb6cdad0fe02ffe3a9bb4e9ee9b3de96bec6ba3633e245666912defaff04b2715e82211f2f786ab2c84d2be5e7b6adf10b3b980db35 SOURCE/PGME/ETERNITY/TDLGPEDI.INC
 1437956760 88594149727ae9231b99fbeb0ef6c458e1a4b509021555c3c3912e965e7f900f337e5838157325f2c3964f84d47024bc47ba57943d8229b48c9cf83c9a08ca7c SOURCE/PGME/ETERNITY/TDLGPROG.INC
 1628170229 6e83337f27d731e33c8a5eef790985f0d8e9500acde374117181a8c072379dc6569eb8be502780df418e22625d06683ca697eee93c2bd2bdbcbf1c0a79804abc SOURCE/PGME/ETERNITY/TMENUCAC.INC
-1628172908 c11ce1fd1fdcd69c17d9b236b7d5b0e055849640885c0e610c2b34d58f3e0f06da3bcd0fc6fd239c778c8d15cde08379fcf36ef85fb3936a1613cc211eeeb389 SOURCE/PGME/ETERNITY/TPGME.INC
-1628173069 991b71b1228864e67a94c9e002ce4d117ea11a8b4be59e747b79d3c68432a42a1f07c08711ca98d3f50e4ee9811683702b4676048312914fe44f7b40bcd9096b SOURCE/PGME/ETERNITY/WHATSNEW.TXT
+1628180257 d16fc6817d4bd1178ee272fe7b627f366813b36a72efdbd8dc08444746bf649d7c256838a668b13d7e02eec67ab0aefbe4523f781164ff85e4776da1bb479b91 SOURCE/PGME/ETERNITY/TPGME.INC
+1628183824 089ee7fbd5d83d4cfaa0f9fdf9f14c9032147b72ccf9e48982f123319306996a4b2509c7c4155d4ca1ffdaae4edb5931910d5838b95289a4e93973df043e0ff8 SOURCE/PGME/ETERNITY/WHATSNEW.TXT
 1437956760 5e9d5bebb8de344f2a5e46e7a68a3c8ca8adb4e463f65ead217ff086d54832765ad80fbc400c5392ce5be660f425e0a30bc20ba117c178bc8774c9577d5f8a8c SOURCE/PGME/ETOOLS/EFNTDSGN.PAS
 1437956760 b6eea7f9c41e03cc924dfe169f31162e5b5bf4e52a9810348416a36da73241dbfe5c1257fee1433c2ca307f64e10f5de8f6ebb18da47b7a6a0b1d052ac3c8908 SOURCE/PGME/ETOOLS/ETOOL.PAS
 1437956760 99bf15c810f5b506b8a9da368d63f2b32f2f500168569a6f80a0ab0641c66ff65730cc67ce5be24fef0c6fbb8601f3682460f9c29cec967b319cb43425694b6e SOURCE/PGME/ETOOLS/ETOOLS.DEF
@@ -103,7 +103,7 @@
 1437956760 6478cc476a10a376adce1784707677cd0595ae1334f1304de7eb74c62b147d814b2ff7167efc4b2f0cbd040dda8d17f286d379ee2153f800865b27a1d7da06f3 SOURCE/PGME/QUICKCRT/QCLASS.PAS
 1437956760 77d813295df65810ac783463cde4ebeacdd8ffa68e6745978598c911d7918e56f4188dc95371c955aca3f36f410fc41d8ece1d05edcc58eb7029d911d962a664 SOURCE/PGME/QUICKCRT/QCONTROL.PAS
 1437956760 b1419e44c62a0e7cf07b967c490e307cf849f4040c5e58992b9948357412c25a8286833a169a1547d0a2898c49251e02649bbd98b20eabbc7268c874b44629fe SOURCE/PGME/QUICKCRT/QCRT.DEF
-1628163019 2ed332f7a8fa03b30bb6e407578db66ec357444e28cb6f19f94460d44effd92d646bbc131fe56ca67b31fd9a04971e6bd4107e2e7edf5007543cbad0d12f1b99 SOURCE/PGME/QUICKCRT/QCRT.PAS
+1628183489 4583583ab571c01bf66c21441f65306fa57ad68b4b862ba02cd4a7f8aa9fe8dea317e60fa47e8e0c172cf1baa5416072eb18fae53073de8624d573ec1f6463bb SOURCE/PGME/QUICKCRT/QCRT.PAS
 1437956760 79759bf3b761254d7cac4f6d5154a4bff26c0b17f8d4a0037d924039724c5b756e2822072446058ddd829c56dcb4717c26c4b46bd800c803c215965770657e9f SOURCE/PGME/QUICKCRT/QDIRCNTL.PAS
 1574957197 49984b39bd605ca96c8eb2182babf6ce32dee267388e21f2887238d1e08b3ccb375e8200aad8a0fecfbe659b96e7a30be1b79de7d8f162ed7d383faee346f3a5 SOURCE/PGME/QUICKCRT/QDOS.PAS
 1437956760 bcb1351d79c02db42e9e557bd345a6cb1dd1b50f4dc15415ec0e1b1686d47629f98c5f9ffd11ae489c8a4372290e0dfac200e88e987a7140450c8cf5cd97308b SOURCE/PGME/QUICKCRT/QERRORS.PAS
@@ -121,7 +121,7 @@
 1437956760 3980f99fe0826d4ceb640c65b8d537c8c89fd966946522b68405b13797d1cea4dd06ea31fe2e409e47d3d8e79ee23d8704aae1dd73c9b58894f17e7995aa0a88 SOURCE/PGME/QUICKCRT/QTEST.PAS
 1628102094 5278af4bac84cc6bf435697aca701d6db1a5ac473db05b5e1d6442014e502596951148a44d5564c3ca233548924211bd02df455b09229ecad814db59b6f93d51 SOURCE/PGME/QUICKCRT/QTIMER.PAS
 1437956760 381833b133b59717492b4ec9507e5ec6d3af55e16bf2e0609278fc6793403b099b4ae424cb144bcf20fdfa98bb5aaab1ad4a9a2d3a728d9a8777b6d4514b95c3 SOURCE/PGME/QUICKCRT/README.md
-1628094582 7825a2e5830b2f0d8821916d4a12bbaa6cc934c90ec2cf84a695c059c8b6a5115d77173cc1ceac66d8cc86f5fe2b3a584b42ed0c7c1422b8354176490ddc809a SOURCE/PGME/QUICKCRT/TAPPLICA.INC
+1628183844 6d330c4f499cf4ec4b5c122870a234795b6f9f479872bec1c7dc17446a6f0d718721bacd20dd755a49cb62badac6b5852bdc4771b2d369e1b7f177996518a04c SOURCE/PGME/QUICKCRT/TAPPLICA.INC
 1437956760 cd7d5b9d283cb24b99a51d3f1f653d9d91102b041dab046a2e78bb5602fbfe034e2905cedcf2896c3d9cdc3dd08ea6c2ea09205457e356e1a2e95bdc4794fbc3 SOURCE/PGME/QUICKCRT/TBOX.INC
 1437956760 637cdb94ce48ae94e1d2337a68fe995082405249dae2d45758f29aa872f0ff5f4af2ad1c071d988117b70d51b63ee299cc9b4e57273b6ae8af5273ce052f29bd SOURCE/PGME/QUICKCRT/TBUTTON.INC
 1437956760 06111b54156ffa47ed3e40678ebbf5e8f1030fc706267cc7e082084fc65c36b51b83399d17266b9806f7694460c92a17935592b61a395f89677ff748fb7fcfe9 SOURCE/PGME/QUICKCRT/TCHARACT.INC
@@ -170,7 +170,7 @@
 1628169185 438e24825a995691408e173f95e79d6c45540591cf7397020cbb03aebc40c216e8b74eb7016474798196794c72d5afc4efaa0108a387900d81f5f7791ce51c08 SOURCE/PGME/BUILD.BAT
 1627934430 f8383a5edc04b6113db78cda2143e29abaab2149c8c7ebbfa7bfe68739323e256fa5f767ce6651169501471fd6982629cb86004ad4e90f16aeb206d56dd4ac1a SOURCE/PGME/CLEAN.BAT
 1627980145 babd8780f308b8ecd082132a088db1402c0e38ddea4e337d1ad571e0c3d163dc94e030229a78192a04edd7be800df76e3848fd584fb8b94c52e42ed2d3ec763a SOURCE/PGME/CONTRIBUTING.md
-1437956760 9939f56c8fb52dfcd2e376bd4a0ba340a1eaa79dabaa9b41980e69691d45c900a926cb19bea643cb1a647e2c751a0ddbeefe39d9af2e90e5cb0ea5064d2b539e SOURCE/PGME/CUSTOM/config/ETERNITY.CFG
+1628183737 16c0a141dca7cb215f66f2e609ba61d783179cb49bdcc0bd28b60629b6ff333d758cbb105bdf92de3d34df45e8d1312f113eee3279a809a6adfb634f140efcf8 SOURCE/PGME/CUSTOM/config/ETERNITY.CFG
 1437956760 8d5d34d79cd66d983bea780a01827f225053c037d68593919f2f335343568747aed4542c7365e573cb55fa16b7a6494f6d4fb4aea18a4e8cad3fc02210bc2a80 SOURCE/PGME/CUSTOM/fonts/ALT814.FNT
 1437956760 79385d9b4c8cf9df9dae524a0ede786c297d25ebe1124824480fb597c768c4d4e126961fef1b3fd431059982fe3d64dceb7acb74c05a0de64d24fe68219aa70c SOURCE/PGME/CUSTOM/fonts/CAP816.FNT
 1591635961 b66d6996af50ddb82e46f2c1d5d6bcb081b781fbd8f39126bdfc9e2d7242fb232059ec7d0950b0013a686e05e9fe866ef3e2ea6434d12978e73a4f0425421509 SOURCE/PGME/CUSTOM/fonts/FR850-16.FNT
@@ -212,7 +212,7 @@
 1628087308 2798a080e867c11b9884eac440aff34f955bf2bd9561b3f81b128608f7153eb3bafc491f6f2fb9e42b0aee49b571fdef4856da5bab1b65350127a631819496bf SOURCE/PGME/ETERNITY/ETERNITY.PAS
 1437956760 a393b94f13104008c70bac30f3288f0a9fc989f5326ac8950cee649723cee4c7aeac77dec74fdaab9df3f3b98ebddcd00feadc413722a8c5a75ed18dd46f2875 SOURCE/PGME/ETERNITY/EXESIZE.PAS
 1437956760 4b2619ef06a45fd329503c3ed40e34d8d67d2cdfe03e40d28efb09e3b737495f57c0d243d6fab1626b809354e292e8add2a1861cf5acb222ff2792e3d1781aef SOURCE/PGME/ETERNITY/INSFILE.INC
-1628163583 7e2e14599f29478774b50564d16a0249efbe6b29870b097c2b26d9113447734d5a75d1900930df00d5037a0ed895c93fd9bfa6ba0148aef5cefcb6fdf75415cb SOURCE/PGME/ETERNITY/INSTALL.INC
+1628183936 651f992e9ae4aa559a06c8a05f4a15f06b1713bfc14470c6999379280dc3c666aa857e1026608698cab289c5131143242464b60daa8424156bd85598093d22f8 SOURCE/PGME/ETERNITY/INSTALL.INC
 1627995630 46414c452c915d83ba3dda225c15ec1bcfe7bc44e98d387a178acaf71fc9e4d4855f3f90f73d4985f28e0267956abcf3967e45fdc1ea8d062b9faf1748c30035 SOURCE/PGME/ETERNITY/INSTALL.PAS
 1437956760 e1b298efe4c706ebee933ac2e0351e8e25998a747be21252e5b2cd371db738706d59cc1b3609e63dfb66ff766844506678766610d40cafa4c541bd1b72dec20d SOURCE/PGME/ETERNITY/INSTALL.PRE
 1437956760 cef0fa20dc6ddeca073b952ab0d7cfca93e7ff7b55f426c8d7135030540b2b18e234b217c4955349dbdbbcca0b74fc839571dd70e16bcdd2920b183a0d002cba SOURCE/PGME/ETERNITY/LICENSE.INC
@@ -236,8 +236,8 @@
 1437956760 dd2e1c7fb981c08166603bb6cdad0fe02ffe3a9bb4e9ee9b3de96bec6ba3633e245666912defaff04b2715e82211f2f786ab2c84d2be5e7b6adf10b3b980db35 SOURCE/PGME/ETERNITY/TDLGPEDI.INC
 1437956760 88594149727ae9231b99fbeb0ef6c458e1a4b509021555c3c3912e965e7f900f337e5838157325f2c3964f84d47024bc47ba57943d8229b48c9cf83c9a08ca7c SOURCE/PGME/ETERNITY/TDLGPROG.INC
 1628170229 6e83337f27d731e33c8a5eef790985f0d8e9500acde374117181a8c072379dc6569eb8be502780df418e22625d06683ca697eee93c2bd2bdbcbf1c0a79804abc SOURCE/PGME/ETERNITY/TMENUCAC.INC
-1628172908 c11ce1fd1fdcd69c17d9b236b7d5b0e055849640885c0e610c2b34d58f3e0f06da3bcd0fc6fd239c778c8d15cde08379fcf36ef85fb3936a1613cc211eeeb389 SOURCE/PGME/ETERNITY/TPGME.INC
-1628173069 991b71b1228864e67a94c9e002ce4d117ea11a8b4be59e747b79d3c68432a42a1f07c08711ca98d3f50e4ee9811683702b4676048312914fe44f7b40bcd9096b SOURCE/PGME/ETERNITY/WHATSNEW.TXT
+1628180257 d16fc6817d4bd1178ee272fe7b627f366813b36a72efdbd8dc08444746bf649d7c256838a668b13d7e02eec67ab0aefbe4523f781164ff85e4776da1bb479b91 SOURCE/PGME/ETERNITY/TPGME.INC
+1628183824 089ee7fbd5d83d4cfaa0f9fdf9f14c9032147b72ccf9e48982f123319306996a4b2509c7c4155d4ca1ffdaae4edb5931910d5838b95289a4e93973df043e0ff8 SOURCE/PGME/ETERNITY/WHATSNEW.TXT
 1437956760 5e9d5bebb8de344f2a5e46e7a68a3c8ca8adb4e463f65ead217ff086d54832765ad80fbc400c5392ce5be660f425e0a30bc20ba117c178bc8774c9577d5f8a8c SOURCE/PGME/ETOOLS/EFNTDSGN.PAS
 1437956760 b6eea7f9c41e03cc924dfe169f31162e5b5bf4e52a9810348416a36da73241dbfe5c1257fee1433c2ca307f64e10f5de8f6ebb18da47b7a6a0b1d052ac3c8908 SOURCE/PGME/ETOOLS/ETOOL.PAS
 1437956760 99bf15c810f5b506b8a9da368d63f2b32f2f500168569a6f80a0ab0641c66ff65730cc67ce5be24fef0c6fbb8601f3682460f9c29cec967b319cb43425694b6e SOURCE/PGME/ETOOLS/ETOOLS.DEF
@@ -269,7 +269,7 @@
 1437956760 6478cc476a10a376adce1784707677cd0595ae1334f1304de7eb74c62b147d814b2ff7167efc4b2f0cbd040dda8d17f286d379ee2153f800865b27a1d7da06f3 SOURCE/PGME/QUICKCRT/QCLASS.PAS
 1437956760 77d813295df65810ac783463cde4ebeacdd8ffa68e6745978598c911d7918e56f4188dc95371c955aca3f36f410fc41d8ece1d05edcc58eb7029d911d962a664 SOURCE/PGME/QUICKCRT/QCONTROL.PAS
 1437956760 b1419e44c62a0e7cf07b967c490e307cf849f4040c5e58992b9948357412c25a8286833a169a1547d0a2898c49251e02649bbd98b20eabbc7268c874b44629fe SOURCE/PGME/QUICKCRT/QCRT.DEF
-1628163019 2ed332f7a8fa03b30bb6e407578db66ec357444e28cb6f19f94460d44effd92d646bbc131fe56ca67b31fd9a04971e6bd4107e2e7edf5007543cbad0d12f1b99 SOURCE/PGME/QUICKCRT/QCRT.PAS
+1628183489 4583583ab571c01bf66c21441f65306fa57ad68b4b862ba02cd4a7f8aa9fe8dea317e60fa47e8e0c172cf1baa5416072eb18fae53073de8624d573ec1f6463bb SOURCE/PGME/QUICKCRT/QCRT.PAS
 1437956760 79759bf3b761254d7cac4f6d5154a4bff26c0b17f8d4a0037d924039724c5b756e2822072446058ddd829c56dcb4717c26c4b46bd800c803c215965770657e9f SOURCE/PGME/QUICKCRT/QDIRCNTL.PAS
 1574957197 49984b39bd605ca96c8eb2182babf6ce32dee267388e21f2887238d1e08b3ccb375e8200aad8a0fecfbe659b96e7a30be1b79de7d8f162ed7d383faee346f3a5 SOURCE/PGME/QUICKCRT/QDOS.PAS
 1437956760 bcb1351d79c02db42e9e557bd345a6cb1dd1b50f4dc15415ec0e1b1686d47629f98c5f9ffd11ae489c8a4372290e0dfac200e88e987a7140450c8cf5cd97308b SOURCE/PGME/QUICKCRT/QERRORS.PAS
@@ -287,7 +287,7 @@
 1437956760 3980f99fe0826d4ceb640c65b8d537c8c89fd966946522b68405b13797d1cea4dd06ea31fe2e409e47d3d8e79ee23d8704aae1dd73c9b58894f17e7995aa0a88 SOURCE/PGME/QUICKCRT/QTEST.PAS
 1628102094 5278af4bac84cc6bf435697aca701d6db1a5ac473db05b5e1d6442014e502596951148a44d5564c3ca233548924211bd02df455b09229ecad814db59b6f93d51 SOURCE/PGME/QUICKCRT/QTIMER.PAS
 1437956760 381833b133b59717492b4ec9507e5ec6d3af55e16bf2e0609278fc6793403b099b4ae424cb144bcf20fdfa98bb5aaab1ad4a9a2d3a728d9a8777b6d4514b95c3 SOURCE/PGME/QUICKCRT/README.md
-1628094582 7825a2e5830b2f0d8821916d4a12bbaa6cc934c90ec2cf84a695c059c8b6a5115d77173cc1ceac66d8cc86f5fe2b3a584b42ed0c7c1422b8354176490ddc809a SOURCE/PGME/QUICKCRT/TAPPLICA.INC
+1628183844 6d330c4f499cf4ec4b5c122870a234795b6f9f479872bec1c7dc17446a6f0d718721bacd20dd755a49cb62badac6b5852bdc4771b2d369e1b7f177996518a04c SOURCE/PGME/QUICKCRT/TAPPLICA.INC
 1437956760 cd7d5b9d283cb24b99a51d3f1f653d9d91102b041dab046a2e78bb5602fbfe034e2905cedcf2896c3d9cdc3dd08ea6c2ea09205457e356e1a2e95bdc4794fbc3 SOURCE/PGME/QUICKCRT/TBOX.INC
 1437956760 637cdb94ce48ae94e1d2337a68fe995082405249dae2d45758f29aa872f0ff5f4af2ad1c071d988117b70d51b63ee299cc9b4e57273b6ae8af5273ce052f29bd SOURCE/PGME/QUICKCRT/TBUTTON.INC
 1437956760 06111b54156ffa47ed3e40678ebbf5e8f1030fc706267cc7e082084fc65c36b51b83399d17266b9806f7694460c92a17935592b61a395f89677ff748fb7fcfe9 SOURCE/PGME/QUICKCRT/TCHARACT.INC
