@@ -7,6 +7,7 @@
 	TYPE=CONFIG
 
 [PGM]
+    CPU_IDLE=ANY
 	CANQUIT=TRUE
 	CLEAR=TRUE
 	PATH.MENU=
